--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Laravel\\Dusk\\": "src/"
+            "Tpccdaniel\\DuskSecure\\": "src/"
         }
     },
     "extra": {
@@ -25,7 +25,7 @@
         },
         "laravel": {
             "providers": [
-                "Laravel\\Dusk\\DuskServiceProvider"
+                "Tpccdaniel\\DuskSecure\\DuskServiceProvider"
             ]
         }
     },
