--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "illuminate/console": "~5.6",
         "illuminate/support": "~5.6",
         "symfony/console": "~4.0",
-        "symfony/process": "~4.0"
+        "symfony/process": "^4.3@dev"
     },
     "require-dev": {
         "mockery/mockery": "~1.0",
